Store new photos in R2
